...
        android:icon="@drawable/chat_icon" />
    <item
        android:id="@+id/homeFragment"
        android:title="Home"
        android:icon="@drawable/home_icon" />
    <item
        android:id="@+id/accountInfoFragment"
        android:title="Profile"
        android:icon="@drawable/profile_icon"/>
</menu>


